# infra_actions

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  main_test.yml  yamdb_workflow.yml
api_yamdb/: Dockerfile  requirements.txt
api_yamdb/api_yamdb/: settings.py
api_yamdb/user/: urls.py  views.py
infra/: docker-compose.yaml
infra/nginx/: default.conf
infra_project/infra_app/: tests.py
