[tool.poetry]
name = "infra-actions"
version = "0.1.0"
description = ""
authors = ["joody"]
readme = "README.md"
packages = [{include = "infra_actions"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "2.2.20"
pytz = "2021.1"
sqlparse = "0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
